# rust-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  rust.yml  security-audit.yml  tag.yml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs
templates/: base.html  index.html
tests/: health_check.rs
