[package]
name = "rust-api"
version = "0.1.0"
authors = ["mansong1 <martin.ansong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_api"

[dependencies]
actix-web = "4.0.0-beta.5"
config = "0.11.0"
serde = "1.0.125"
tera = "1.7.0"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
